Add dining table service and reservation service